--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="org.xm.app.translator.opensource">
 
+	<uses-permission android:name="android.permission.INTERNET"/>
+
 	<application
 		android:name=".app.MyApp"
 		android:allowBackup="true"
@@ -9,8 +11,8 @@
 		android:label="@string/app_name"
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
-		android:theme="@style/AppTheme">
-		<activity android:name=".MainActivity">
+		android:theme="@style/FullScreenStyle">
+		<activity android:name=".ui.MainDrawerActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 
